更新评论模块

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,8 @@
                 <a class="foot-item" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}" target="_blank"><span class="octicon octicon-rss"></span></a>
                 <a class="foot-item" href="{{ '/link/' | prepend: site.baseurl | prepend: site.url }}"><span class="octicon octicon-link-external"></span></a>
                 &nbsp;
-                <a href=""><span class="word-keep">&copy; 2021 连边</span></a>
+                <a href="/"><span class="word-keep">&copy; 2021 连边</span></a>
+                |<a href="http://www.miitbeian.gov.cn/" target="_blank"><span class="word-keep">湘ICP备1900865号-3</span></a>
         </div>
     </footer>
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
