增加订阅号图片

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,6 +32,10 @@ layout: default
           </div>
         </div>
         <div class="pad-min"></div>
+        <div class="sheet post">关注我，阅读更多精彩文章</div>
+        <div class="sheet post">
+            <img style="height: 200px; width: 200px;" title="连边的订阅号" src="http://mkstatic.lianbian.net/wx_qr.jpg">
+        </div>
         <!-- <div id="post-comment" class="sheet post hidden">
             <div id="disqus_thread"></div>
         </div>
